--- a/src/index.css
+++ b/src/index.css
@@ -8,9 +8,6 @@
   justify-content: center;
 }
 
-
-
-
 .card {
   display: flex;
   flex-direction: column;
@@ -23,7 +20,20 @@
   height: 200px;
   font-size: 25px;
   position: relative;
+
 }
+.game-line {
+  position: absolute;
+  right: 20px;
+  top: 50%;
+  transform: translateY(-50%);
+  background-color: white;
+  padding: 10px;
+  border-radius: 10px;
+  border: 2px solid black;
+  color: black;
+}
+
 .vs {
   align-self: center;
   text-align: center;
@@ -44,13 +54,10 @@
   text-align: center;
 }
 
-
-button {
-  margin-bottom: 10px;
+.title {
+  font-size: 50px;
+  font-family: 'Bakbak One', cursive;
 }
-
-
-
 
 
 h1 {
